--- a/VarPControl/Style/Themes/PTextBox.xaml
+++ b/VarPControl/Style/Themes/PTextBox.xaml
@@ -1,6 +1,25 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:VarPControl="clr-namespace:VarPControl"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
 
     <!--TextBox默认样式扩展-->
+    <Style TargetType="{x:Type TextBox}" x:Key="DefaultTextBox">
+        <Setter Property="ContextMenu" Value="{DynamicResource TextBoxContextMenu}" />
+        <Setter Property="SelectionBrush" Value="{StaticResource TextSelectionBrush}" />
+        <Setter Property="FontFamily" Value="{StaticResource FontFamily}" />
+        <Setter Property="FontSize" Value="{StaticResource FontSize}" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="MinHeight" Value="26" />
+        <Setter Property="Width" Value="100" />
+        <Setter Property="Background" Value="{StaticResource TextBackground}" />
+        <Setter Property="Foreground" Value="{StaticResource TextForeground}" />
+        <Setter Property="Padding" Value="0" />
+        <Setter Property="BorderBrush" Value="{StaticResource ControlBorderBrush}" />
+        <Setter Property="local:ControlAttachProperty.FocusBorderBrush" Value="{StaticResource FocusBorderBrush}" />
+
+        
+    </Style>
+
 
 </ResourceDictionary>
