--- a/VarPDemo/App.xaml
+++ b/VarPDemo/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="VarPDemo.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="LoginWindow.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
